--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Zafer Mah 4925/1 Parsel</title>
+  
+ <!-- 🔹 Sosyal medya ön izleme meta etiketleri -->
+  <meta property="og:title" content="Zafer Mahallesi 4925/1 Parselleri" />
+  <meta property="og:description" content="SATILIK İMARLI PARSELLER – Zafer Mahallesi | İmar: E=0.40 Hmax=2 Kat" />
+  <meta property="og:image" content="https://68meda68hub.github.io/zafer-mah-4925-1/images/1.jpeg" />
+  <meta property="og:url" content="https://68meda68hub.github.io/zafer-mah-4925-1/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="tr_TR" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Zafer Mahallesi 4925/1 Parselleri" />
+  <meta name="twitter:description" content="SATILIK İMARLI PARSELLER – Zafer Mahallesi | İmar: E=0.40 Hmax=2 Kat" />
+  <meta name="twitter:image" content="https://68meda68hub.github.io/zafer-mah-4925-1/images/1.jpeg" />
+
+ 
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
   
