--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background: orange;
+      background: rgba(0,0,0,0.7);
       color: white;
       font-size: 12px;
       padding: 5px 10px;
@@ -104,22 +104,23 @@
     }
 	
 #zoom-level {
+	display: none;
     position: absolute;
-    background: white;
-    padding: 5px 8px;
+    background: black;
+    padding: 3px 3px;
     margin: 10px;
     z-index: 1;
     border-radius: 4px;
     font-family: Tahoma;  
 	font-size: 10px;
-	color: #000;	
+	color: white;	
 	left: 0;
 	bottom: 25px; 
     }	
 @media only screen and (max-width: 414px) {
 #zoom-level {
     position: absolute;
-    background: white;
+    background: black;
     padding: 3px 3px;
     margin: 10px;
     z-index: 1;
@@ -127,8 +128,22 @@
     font-family: Tahoma;  
 	font-size: 9px;	
 	left: 0;
-	bottom: 40px; 
+	bottom: 20px; 
     }	
+}
+
+#current-time {
+    position: absolute;
+    right: 10px;
+    bottom: 10px; /* zoom-level’le aynı duracak */
+    padding: 3px 6px;
+    background: black;
+    color: #fff;
+    font-family: Tahoma;
+    font-size: 10px;
+    border-radius: 4px;
+    z-index: 1;
+    transition: color 0.3s ease, background 0.3s ease;
 }
   </style>
 </head>
@@ -141,6 +156,7 @@
 <div id="map"></div>
 
 <div id="zoom-level">Zoom: --</div>
+<div id="current-time">--:--:--</div>
 
 <script>
   mapboxgl.accessToken = 'pk.eyJ1IjoiZ2VvZ3JhcGh5cHJvZiIsImEiOiJjanYxb2t1ZG8wNGU1NGFsNXVkcnhzNmFpIn0.M3qCJK8FYa06B-Irc6FD-g';
@@ -239,7 +255,7 @@
         essential: true
       });
     }, 2000); // Animasyon süresi
-  }, 10000); // 10 saniye bekleme
+  }, 3000); // 10 saniye bekleme
 
   map.on('load', () => {
     map.addSource('parcels', {
@@ -397,7 +413,18 @@ map.addSource('google-satellite', {
       minzoom: 15 // istersen görünmesi için minimum zoom
     });
 
-	
+function updateTime() {
+    const now = new Date();
+    const h = String(now.getHours()).padStart(2,'0');
+    const m = String(now.getMinutes()).padStart(2,'0');
+    const s = String(now.getSeconds()).padStart(2,'0');
+    document.getElementById('current-time').textContent = `${h}:${m}:${s}`;
+}
+
+// Başlangıçta hemen güncelle
+updateTime();
+// Her saniye tekrar
+setInterval(updateTime, 1000);	
 	
   });
 </script>
