--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
   
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  
   <style>
     body { 
 	margin:0; 
@@ -114,7 +116,7 @@
     }
 	
 #zoom-level {
-//display: none;
+	display: none;
     position: absolute;
     background: rgba (0, 0, 0, 0.5);
     padding: 5px 8px;
@@ -149,7 +151,7 @@
     right: 10px;
     bottom: 42px; /* zoom-level’le aynı duracak */
     padding: 3px 6px;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0,0,0,0.7);
     color: #fff;
     font-family: Tahoma;
     font-size: 10px;
@@ -157,8 +159,21 @@
     z-index: 1;
     transition: color 0.3s ease, background 0.3s ease;
 }
-
-
+/* sadece ikon büyüsün */
+#current-time i {
+  font-size: 14px; /* ikon biraz büyük */
+  
+}
+@media only screen and (max-width: 414px) {
+	#current-time {
+    right: 10px;
+    bottom: 10px; /* zoom-level’le aynı duracak */
+    padding: 3px 6px;
+    font-size: 10px;
+    border-radius: 4px;
+    z-index: 1;
+    transition: color 0.3s ease, background 0.3s ease;
+}}
 
 .custom-popup-carousel {
     width: 220px;
@@ -319,7 +334,8 @@
 <div id="map"></div>
 
 <div id="zoom-level">Zoom: --</div>
-<div id="current-time">--:--:--</div>
+<div id="current-time"><i class="fa-solid fa-clock"></i> --:--:--</div>
+
 
 <script>
   mapboxgl.accessToken = 'pk.eyJ1IjoiZ2VvZ3JhcGh5cHJvZiIsImEiOiJjanYxb2t1ZG8wNGU1NGFsNXVkcnhzNmFpIn0.M3qCJK8FYa06B-Irc6FD-g';
@@ -702,12 +718,14 @@ map.on('zoom', () => {
 });
 
 function updateTime() {
-    const now = new Date();
-    const h = String(now.getHours()).padStart(2,'0');
-    const m = String(now.getMinutes()).padStart(2,'0');
-    const s = String(now.getSeconds()).padStart(2,'0');
-    document.getElementById('current-time').textContent = `${h}:${m}:${s}`;
+  const now = new Date();
+  const timeString = now.toLocaleTimeString('tr-TR');
+  document.getElementById('current-time').innerHTML = `<i class="fa-solid fa-clock"></i> ${timeString}`;
 }
+
+setInterval(updateTime, 1000);
+updateTime();
+
 
 // Başlangıçta hemen güncelle
 updateTime();
