--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Zafer Mah 4925/1 Parsel</title>
+	  <meta charset="UTF-8" />
+	  <meta name="viewport" content="width=device-width, initial-scale=1" />
+	  <!-- 🔹 Sosyal medya ön izleme meta etiketleri -->
+	  <meta property="og:title" content="Zafer Mahallesi 4925/1 Parselleri" />
+	  <meta property="og:description" content="SATILIK İMARLI PARSELLER – Zafer Mahallesi | İmar: E=0.40 Hmax=2 Kat" />
+	  <meta property="og:image" content="https://68meda68hub.github.io/zafer-mah-4925-1/images/1.jpeg" />
+	  <meta property="og:url" content="https://68meda68hub.github.io/zafer-mah-4925-1/" />
+	  <meta property="og:type" content="website" />
+	  <meta property="og:locale" content="tr_TR" />
+
+	  <meta name="twitter:card" content="summary_large_image" />
+	  <meta name="twitter:title" content="Zafer Mahallesi 4925/1 Parselleri" />
+	  <meta name="twitter:description" content="SATILIK İMARLI PARSELLER – Zafer Mahallesi | İmar: E=0.40 Hmax=2 Kat" />
+	  <meta name="twitter:image" content="https://68meda68hub.github.io/zafer-mah-4925-1/images/1.jpeg" />
   
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
 
-  <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
-  <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
-  
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+	<script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
+	<link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
+	  
+	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   
   <style>
     body { 
