--- a/index.html
+++ b/index.html
@@ -184,31 +184,51 @@
     transition: color 0.3s ease, background 0.3s ease;
 }}
 
+
+.mapboxgl-popup-content {
+  max-width: none !important;
+  width: 310px !important;
+  padding: 0;
+  background: transparent;
+  border-radius: 6px;
+  box-shadow: none;
+  overflow: visible;
+}
+.mapboxgl-popup-tip {
+    border-top-color: #483c32 !important; /* popup zemin rengi ile aynı */
+}
 .custom-popup-carousel {
-    width: 220px;
+    position: relative;
+    left: -40px; /* popup gövdesini sola kaydırır */
+}
+
+
+.custom-popup-carousel {
+    width: 300px;
     text-align: center;
-    background: #483c32;
-    border-radius: 2px;
-    padding-bottom: 10px;
+    background: #483c32; /* çerçeve rengi */
+    border-radius: 6px;
+    padding: 10px; /* 🔹 iç kenar boşluğu eklendi */
     position: relative;
     overflow: hidden;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+    box-shadow: 0 6px 18px rgba(0,0,0,0.45);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    opacity: 1; /* hemen görünür */
-	}
+    opacity: 1;
+}
 
 .custom-popup-carousel:hover {
-    transform: scale(1.02);
-    box-shadow: 0 8px 18px rgba(0,0,0,0.5);
-	}
+    transform: scale(1.03);
+    box-shadow: 0 10px 22px rgba(0,0,0,0.55);
+}
 
 .carousel-items {
     position: relative;
-    width: 220px;
-    height: 150px;
-    border-radius: 8px 8px 0 0;
+    width: 100%;
+    height: 180px; /* 🔹 biraz küçülttük (200 → 180) */
+    border-radius: 8px;
     border-bottom: 2px solid #fff;
-	}
+    background: #2f2720; /* kenar görünümü için arka plan tonu */
+}
 
 .carousel-item {
     position: absolute;
@@ -218,39 +238,40 @@
     height: 100%;
     opacity: 0;
     transition: opacity 0.8s ease-in-out;
-	}
+}
 
 .carousel-item.active {
     opacity: 1;
 	}
 
 .carousel-item img {
-    width: 100%;
-    height: 100%;
+    width: 94%;         /* 🔹 %100 → %94 */
+    height: 94%;        /* 🔹 biraz küçültüldü */
     object-fit: cover;
-    border-radius: 8px 8px 0 0;
-	}
-
+    border-radius: 6px;
+    margin-top: 3%;
+    box-shadow: 0 0 6px rgba(0,0,0,0.4);
+}
 
 .carousel-item .caption {
-    max-width: 90%;       /* resim genişliğinin %90’ı kadar */
-    white-space: nowrap;  /* tek satır */
-    overflow: hidden;     /* taşan kısmı gizle */
-    text-overflow: ellipsis; /* taşan kısmı “...” ile göster */
+    max-width: 90%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     position: absolute;
     bottom: -10px;
     left: 50%;
     transform: translateX(-50%);
-    color: #000; 
+    color: #000;
     text-shadow: 0 0 2.5px #fff;
-    padding: 2px 5px;
-    font-size: 11px;
+    padding: 3px 6px;
+    font-size: 13px;
     background: none;
     border-radius: 3px;
     text-align: center;
-	//font-weight:bold;
-	font-family: Tahoma;
-	}
+    font-family: Tahoma, sans-serif;
+    font-weight: 500;
+}
 
 .popup-subtext {
     font-family: 'Tahoma';
